--- a/landing/landing.html
+++ b/landing/landing.html
@@ -11,17 +11,18 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">
-                <img src="Logo.png" class="img-fluid" alt="DoubleTap Logo" style="width: 200px; height: 50px;">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+            <img src="Logo.png" class="img-fluid" alt="DoubleTap Logo" style="width: 200px; height: 50px;">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="header">
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link disabled" aria-current="page" href="#">Home</a>
                     </li>
@@ -45,134 +46,146 @@
                     </li>
                 </ul>
             </div>
-        </nav>
-    </header>
-    <div class="chat">
-        <div class="d-flex mb-3"></div>
-        <div class="d-flex mb-3">
-            <div class="d-flex flex-column bd-highlight">
-                <div class="p-2 bd-highlight">
-                    <div class="p-2 bd-highlight"><b>Focus on Your Business</b></div>
-                    <div class="p-2 bd-highlight">Let Us Handle Everything Else</div>
-                    <div class="p-2 bd-highlight">
-                        <h2>Subscription Billing, powered with revenue retention tools and a seamless customer
-                            experience -
-                            without
-                            the
-                            technical hurdles.</h2>
-                        <button type="button" class="btn btn-primary">Sign Up Free</button>
-                        <button type="button" class="btn btn-outline-secondary"><strong>Chat With Us</strong></button>
-                        <h3>Already using <strong>Double</strong>Tap? <strong>Sign in</strong></h3>
-                        <div>
-                            <strong><span class="blue-dot">Free 14 day trial</span>
-                                <span class="blue-dot">Manage Customers
-                                    in Minutes</span>
-                                <span class="blue-dot">Cancel at Anytime</span></strong>
-                            <div class="sign">
-                                <div class="box1">
-                                    <img src="business.png" class="img-fluid" alt="Business Image">
-                                </div>
-                            </div>
-                        </div>
+        </div>
+    </nav>
+    <div class="flex_container">
+        <div class="flexbox1">
+            <div class="leftbox"><b>Focus on Your Business</b>
+                <div class="p-2 bd-highlight">Let Us Handle Everything Else
+                    <h2>Subscription Billing, powered with revenue retention tools and a seamless customer
+                        experience -
+                        without
+                        the
+                        technical hurdles.
+                    </h2>
+                </div>
+                <button class="signupbtn">Sign Up Free &#187;</button>
+                <button class="chatbtn">&#x1F4AC;<b>Chat With Us</b></button>
+
+                <h3>Already using <b>Double</b>Tap? <b>Sign in</b></h3>
+                <b>
+                    <span class="blue-dot">Free 14 day trial</span>
+                    <span class="blue-dot">Manage Customers
+                        in Minutes</span>
+                    <span class="blue-dot">Cancel at Anytime</span></b>
+            </div>
+            <div class="rightbox">
+                <img src="business.png" class="icons" alt="business">
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="flexbox2">
+        <div class="start">
+            <h2><b>Start to Explore Double Tap</b></h2>
+            <p>A new and better way for small businesses to manage their customer base, payments and keep track
+                of
+                internal
+                tasks</p>
+            <div class="payment">
+                <img src="person.png" alt="Email" class="rounded float-start">
+                <button class="btn6">Payments</button>
+                <img src="person.png" alt="Email" class="img-thumbnail">
+               <button class="btn7">Retain</button>
+                <img src="analytics.png" alt="Email" class="img-thumbnail">
+                <button class="btn8">Reporting</button>
+                <img src="arrows.png" alt="Email" class="img-thumbnail">
+                <button class="btn9">Convert</button>
+                
+            </div>
+        </div>
+    </div>
+    <div class="flex_container">
+        <div class="flexbox">
+            <div class="p-2 bd-highlight">
+                <div class="body">
+                    <img src="credit.png" alt="Email" class="img-relative">
+                    <div class="card-body">
+                        <h5>Start Accepting Payments With Ease</h5>
+                        <p class="card-text">ACCEPTING PAYMENTS WITH EASE</p>
+                        <h3 class="deliver">Deliver the world of payment options and seamless checkout experiences,
+                            making it easy
+                            for your
+                            customers to pay you for your products and services.
+                            <br>
+                            <a> -accept credit & debit cards, Paypal, ACH, Apple pay and more with the flick of a switch
+                                <br>
+                                -process transactions in up to 32 different currencies.
+                                <br>
+                                -Integrate with popular payment gateways like Stripe, and Braintree
+                                <br>
+                                -Select from a variety of different checkout options and experiences</a>
+                        </h3>
+                        <button class="btn5">Learn more ></button></a>
+
                     </div>
                 </div>
             </div>
         </div>
-        <hr>
-
-        <div class="start">
-            <h2><strong>Start to Explore Double Tap</strong></h2>
-            <p>A new and better way for small businesses to manage their customer base, payments and keep track of
-                internal
-                tasks</p>
-            <button type="button">Payments</button>
-            <img src="analytics.png" alt="Email" class="img-thumbnail">
-            <button type="button">Retain</button>
-            <img src="person.png" alt="Email" class="img-thumbnail">
-            <button type="button">Reporting</button>
-            <img src="analytics.png" alt="Email" class="img-thumbnail">
-            <button type="button">Convert</button>
-            <img src="arrows.png" alt="Email" class="img-thumbnail">
+    </div>
+    </div>
+    <div class="flexbox4">
+        <h4><b>Solutions to fit your business needs</b></h4>
+        <div class="d-flex flex-row bd-highlight mb-3">
+            <div class="p-2 bd-highlight">
+                <div class="card" style="width: 15rem;">
+                    <img src="email.png" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>Email dashboards</b></h5>
+                        <p class="card-text">Automate client responses, and keep track of any communication your
+                            team has
+                            with a client.</p>
+                        <button class="btn1">Learn more ></button>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex flex-row bd-highlight mb-3"></div>
+            <div class="card" style="width: 15rem;">
+                <img src="email.png" class="card-img-top" alt="">
+                <div class="card-body">
+                    <h5 class="card-title"><b>Task management</b></h5>
+                    <p class="card-text">Automate client responses, and keep track of any communication your
+                        team has with a
+                        client.</p>
+                    <button class="btn2">Learn more ></button>
+                </div>
+            </div>
         </div>
 
         <div class="d-flex flex-row bd-highlight mb-3">
+            <div class="d-flex flex-row bd-highlight mb-3"></div>
             <div class="p-2 bd-highlight">
-                <div class="credit">
-                    <img src="credit.png" alt="Email" class="img-relative">
+                <div class="card" style="width: 15rem;">
+                    <img src="email.png" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title"><b>Analytics</b></h5>
+                        <p class="card-text">Automate client responses, and keep track of any communication your
+                            team has
+                            with a
+                            client.</p>
+                        <button class="btn3">Learn more ></button>
+                    </div>
                 </div>
             </div>
-            <div class="p-2 bd-highlight">
-                <div class="card-body">
-                    <h5>Start Accepting Payments With Ease</h5>
-                    <p class="card-text">ACCEPTING PAYMENTS WITH EASE</p>
-                    <h3>Deliver the world of payment options and seamless checkout experiences, making it easy for your
-                        customers to pay you for your products and services.
-                        -accept credit & debit cards, Paypal, ACH, Apple pay and more with the flick of a switch
-                        -process transactions in up to 32 different currencies.
-                        -integrate with popular payment gateways like Stripe, and Braintree
-                        -Select from a variety of different checkout options and experiences</h3>
-                    <a href="#" class="btn btn-primary">Learn more ></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <h4><b>Solutions to fit your business needs</b></h4>
-    <div class="d-flex flex-row bd-highlight mb-3">
-        <div class="p-2 bd-highlight">
+
             <div class="card" style="width: 15rem;">
                 <img src="email.png" class="card-img-top" alt="">
                 <div class="card-body">
-                    <h5 class="card-title"><b>Email dashboards</b></h5>
-                    <p class="card-text">Automate client responses, and keep track of any communication your team has
-                        with a client.</p>
-                    <a href="#" class="btn btn-light">Learn More ></a>
-                </div>
-            </div>
-        </div>
-        <div class="d-flex flex-row bd-highlight mb-3"></div>
-
-        <div class="card" style="width: 15rem;">
-            <img src="email.png" class="card-img-top" alt="">
-            <div class="card-body">
-                <h5 class="card-title"><b>Task management</b></h5>
-                <p class="card-text">Automate client responses, and keep track of any communication your team has with a
-                    client.</p>
-                <a href="#" class="btn btn-light">Learn More ></a>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="d-flex flex-row bd-highlight mb-3">
-        <div class="d-flex flex-row bd-highlight mb-3"></div>
-        <div class="p-2 bd-highlight">
-            <div class="card" style="width: 15rem;">
-                <img src="email.png" class="card-img-top" alt="">
-                <div class="card-body">
-                    <h5 class="card-title"><b>Analytics</b></h5>
-                    <p class="card-text">Automate client responses, and keep track of any communication your team has
-                        with a
+                    <h5 class="card-title"><b>Project calendars</b></h5>
+                    <p class="card-text">Automate client responses, and keep track of any communication your
+                        team has with a
                         client.</p>
-                    <a href="#" class="btn btn-light">Learn More ></a>
+                    <button class="btn4">Learn more ></button>
                 </div>
             </div>
         </div>
 
-        <div class="card" style="width: 15rem;">
-            <img src="email.png" class="card-img-top" alt="">
-            <div class="card-body">
-                <h5 class="card-title"><b>Project calendars</b></h5>
-                <p class="card-text">Automate client responses, and keep track of any communication your team has with a
-                    client.</p>
-                <a href="#" class="btn btn-light">Learn More ></a>
-            </div>
-        </div>
-    </div>
     </div>
     <section class="footer">
         <footer class="text-center text-white">
             <p class="d-flex justify-content-center align-items-center">
                 <span class="me-3"><b>TRY DOUBLE TAP TODAY</b></span>
+                <h7>Get Started Today</h7>
                 <button type="button" class="btn btn-success btn-rounded">
                     Get Started >>
                 </button>
@@ -180,13 +193,13 @@
                     Chat With Us
                 </button>
             </p>
-            <h4><strong>
+            <h4><b>
                     14 day trial
                     <span class="white-dot"></span>
                     Manage Customers in Minutes
                     <span class="white-dot"></span>
                     Cancel at Anytime
-                </strong></h4>
+                </b></h4>
         </footer>
     </section>
 
